karpenter/add-karpenter-donot-disrupt/.chainsaw-test/patched03.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: addjob02
spec:
  template:
    metadata:
      annotations:
        foo.bar.io/name: bar
        karpenter.sh/do-not-disrupt: "true"
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
        command: ["sleep",  "3600"]
      restartPolicy: Never
  backoffLimit: 4
