karpenter/add-karpenter-donot-disrupt/.chainsaw-test/patched04.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  name: addcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:
            foo.bar.io/name: bar
            karpenter.sh/do-not-disrupt: "true"
        spec:
          containers:
          - name: busybox
            image: ghcr.io/kyverno/test-busybox:1.35
            command: ["sleep",  "3600"]
          restartPolicy: OnFailure
