karpenter/add-karpenter-donot-disrupt/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-karpenter-donot-disrupt
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
