karpenter/add-karpenter-donot-disrupt/.kyverno-test/patched01.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: addjob01
spec:
  template:
    metadata:
      annotations:
        karpenter.sh/do-not-disrupt: "true"
    spec:
      containers:
      - name: pi
        image: perl
        command: ["perl",  "-Mbignum=bpi", "-wle", "print bpi(2000)"]
      restartPolicy: Never
  backoffLimit: 4
