karpenter/add-karpenter-donot-disrupt/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-karpenter-donot-disrupt
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../add-karpenter-donot-disrupt.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ../.kyverno-test/resource.yaml
    - apply:
        file: resource-others.yaml
  - name: step-03
    try:
    - assert:
        file: ../.kyverno-test/patched01.yaml
    - assert:
        file: ../.kyverno-test/patched02.yaml
    - assert:
        file: patched03.yaml
    - assert:
        file: patched04.yaml
